confirmation works now

--- a/app/views/confirmations/_form.html.erb
+++ b/app/views/confirmations/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field" style="display:none;" >
+  <div class="field" >
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
   </div>
 
-  <div class="field" style="display:none;" >
+  <div class="field">
     <%= f.label :event_id %><br>
     <%= f.text_field :event_id %>
   </div>
