--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-md-6">
     <h1>your events</h1>
     <% time_now = Time.now %>
 
@@ -44,9 +44,10 @@
     <% end %> 
   </div>
 
-  <div class="col-sm-6">
+  <div class="col-md-6">
     <h1>local public events</h1>
     <% if @public_events.count > 0 %> 
+    <div class="table-responsive">
     <table class="table table-striped">
     <% @public_events.each do |event| %>
     <tr>
@@ -66,7 +67,7 @@
         <% end %>
       </small>
       <br>
-      |<% if !event.desc.empty? %>
+      <% if !event.desc.empty? %>
       <%= event.desc %>
       <% else %>
       no description
@@ -75,6 +76,7 @@
       </tr>
     <% end %>
     </table>
+    </div>
     <% else %>
     no public events are planned around you
     <% end %> 
