--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,147 +1,195 @@
 
-<div class="row">
-    <div class="col-sm-6">
-      <h1><%= @event.name %> 
-        <% if @has_attended == true %>
-        <label class="pull-right label label-success">attended!</label>
-        <% end %>
-      </h1>
-      <table class="table table-striped">
-        <tr>
-          <td>
-            name
-          </td>
-          <td>
-            <%= @event.name %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            description 
-          </td>
-          <td>
-            <%= @event.desc %>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            start
-          </td>
-          <td> 
-			     <%= @event.start.in_time_zone(@zone.name).strftime("%B %d, %Y at %I:%M %p") %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            duration 
-          </td>
-          <td>
-            <%= (@event.duration * 1.minutes).round %> minutes
-          </td>
-        </tr>
-        <tr>
-          <td>
-            time zone
-          </td>
-          <td>
-            <%= @event.timezone %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            address 
-          </td>
-          <td>
-            <% if @event.address != nil %>
-            <%= @event.address %>
-            <% else %>
-            not specified
-            <% end %>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            status
-          </td>
-          <td>
-            <% if @event.is_public == true %>
-            <label class="label label-success">public event</label>
-            <% else %>
-            <label class="label label-danger">private event</label>
-            <% end %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            representitive 
-          </td>
-          <td>
-            <%= link_to @owner.email, @owner %> in <%= link_to @group.name, @group %>
-          </td>
-        </tr>
-      </table>
-
-      <br>
-      <%= link_to 'back', events_path %>
-      <% if current_user != nil and current_user.id == @event.user_id %>
-        | <%= link_to 'edit', edit_event_path(@event) %>
+<div class="row" style="height:100%">
+  <div class="col-sm-6">
+  <div id="x"></div>
+    <h1><%= @event.name %> 
+      <% if @has_attended == true %>
+      <label class="pull-right label label-success">attended!</label>
+      <% else %>
+        <form action="/confirmations/checkin/<%= @event.id %>" class="in-line" id="create_form" method="get">
+          <%= token_tag %>
+          <input id="latitude" name="latitude" type="hidden">
+          <input id="longitude" name="longitude" type="hidden">
+          <input type="submit" id="checkin_submit" value="check in" class="btn btn-sm btn-warning" disabled>
+        </form>
       <% end %>
-    </div>
-    <div class="col-sm-6">
-      <div id="map-canvas">
-      </div>  
-    </div>
+    </h1>
+    <table class="table table-striped">
+      <tr>
+        <td>
+          name
+        </td>
+        <td>
+          <%= @event.name %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          description 
+        </td>
+        <td>
+          <%= @event.desc %>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          start
+        </td>
+        <td> 
+          <%= @event.start.in_time_zone(@zone.name).strftime("%B %d, %Y at %I:%M %p") %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          duration 
+        </td>
+        <td>
+          <%= (@event.duration * 1.minutes).round %> minutes
+        </td>
+      </tr>
+      <tr>
+        <td>
+          time zone
+        </td>
+        <td>
+          <%= @event.timezone %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          address 
+        </td>
+        <td>
+          <% if @event.address != nil %>
+          <%= @event.address %>
+          <% else %>
+          not specified
+          <% end %>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          status
+        </td>
+        <td>
+          <% if @event.is_public == true %>
+          <label class="label label-success">public event</label>
+          <% else %>
+          <label class="label label-danger">private event</label>
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          representitive 
+        </td>
+        <td>
+          <%= link_to @owner.email, @owner %> in <%= link_to @group.name, @group %>
+        </td>
+      </tr>
+    </table>
+
+    <br>
+    <%= link_to 'back', events_path %>
+    <% if current_user != nil and current_user.id == @event.user_id %>
+    | <%= link_to 'edit', edit_event_path(@event) %>
+    <% end %>
+   
+    <div id="check"></div>
+
+
   </div>
-   <div class="row">
-      <div class="col-sm-12">
-        <% if current_user != nil %>
-        <h2>all alerts</h2> <%= link_to 'Make Alert', new_alert_path %>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>scheduled for</th>
-              <th>sent</th>
-              <th>message</th>
-            </tr>
-          </thead>
+  <div class="col-sm-6">
+    <div id="map-canvas" style="height: 400px">
+    </div>  
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <% if current_user != nil %>
+    <h2>all alerts</h2> <%= link_to 'Make Alert', new_alert_path %>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>scheduled for</th>
+            <th>sent</th>
+            <th>message</th>
+          </tr>
+        </thead>
 
-          <tbody>
-            <% @all_alerts.each do |alert| %>
-            <tr>
-              <td>
-                <%= alert.send_datetime.in_time_zone(@zone.name).strftime("%B %d, %Y at %I:%M %p") %>
-              </td>
-              <td>
-                <% if alert.is_sent == true %>
-                <label class="label label-success">sent</label>
-                <% else %>
-                <label class="label label-danger">queued</label>
-                <% end %>
-              </td>
-              <td><%= alert.body %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <% end %>
-      </div>
+        <tbody>
+          <% @all_alerts.each do |alert| %>
+          <tr>
+            <td>
+              <%= alert.send_datetime.in_time_zone(@zone.name).strftime("%B %d, %Y at %I:%M %p") %>
+            </td>
+            <td>
+              <% if alert.is_sent == true %>
+              <label class="label label-success">sent</label>
+              <% else %>
+              <label class="label label-danger">queued</label>
+              <% end %>
+            </td>
+            <td><%= alert.body %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
+    <% end %>
+  </div>
+    
+</div>
 
-
-
-  <script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?sensor=true">
-</script>
 <script type="text/javascript">
   function initialize() {
+    var myLatlng = new google.maps.LatLng(<%= @event.latitude %>, <%= @event.longitude %>);
     var mapOptions = {
-      center: new google.maps.LatLng(-34.397, 150.644),
-      zoom: 8
+      center: myLatlng,
+      zoom: 13
     };
-    var map = new google.maps.Map(document.getElementById("map-canvas"),
+    var map = new google.maps.Map(document.getElementById('map-canvas'),
       mapOptions);
+    var marker = new google.maps.Marker({
+      position: myLatlng,
+      map: map,
+      title: '<%= @event.name %>'
+    });
+    var contentString = "<h1><%= @event.name %></h1> <small><%= @event.address %><br><%= @event.start.in_time_zone(@zone.name).strftime("%B %d, %Y at %I:%M %p") %></small><hr><p><%= @event.desc %></p>";
+
+    var infowindow = new google.maps.InfoWindow({
+      content: contentString
+    });
+
+    google.maps.event.addListener(marker, 'click', function() {
+      infowindow.open(map,marker);
+    });
+
   }
-  google.maps.event.addDomListener(window, 'load', initialize);
+  $(document).ready(initialize());
+</script>
+
+
+<script type="text/javascript">
+  function getLocation() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(showPosition);
+    } else {
+      $('#x').html("Geolocation is not supported by this browser.");
+    }
+  }
+  function showPosition(position) {
+    $('#latitude').val(position.coords.latitude );
+    $('#longitude').val(position.coords.longitude );
+    $("#checkin_submit").prop('disabled', false);
+    
+
+  }
+
+  $(document).ready(function(){
+    getLocation();
+  });
 </script>
